overflow on mobile fix

--- a/src/components/loginpage.css
+++ b/src/components/loginpage.css
@@ -339,6 +339,10 @@ body {
 }
 
 @media screen and (max-width: 500px) {
+    #mainpage {
+        overflow-x: hidden;
+    }
+
     .choose_user {
         right: 10%;
     }
